welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^DwarfCode:10: error: not found: value Direction
    setDirection(Direction.WEST)
                 ^DwarfCode:11: error: value unary_! is not a member of Int
    while ((!estSurBiscuit()) && (!getX()==0)) avance()
                                  ^